--- a/style.css
+++ b/style.css
@@ -111,6 +111,7 @@
 .img-width{
     font-family: 'Poppins', sans-serif;
     font-size: 20px;
+    margin-right: 30px;
 }
 .img-width p{
     font-family: 'Poppins', sans-serif;
@@ -140,6 +141,7 @@
     font-family: 'Poppins', sans-serif;
     font-size: 20px;
     margin-top: 66px;
+
 }
 .global-community p{
     font-family: 'Poppins', sans-serif;
@@ -177,6 +179,7 @@
     font-size: 30px;
     font-family: 'Poppins', sans-serif;
     margin-top: 96px;
+    margin-right: 40px;
 }
 .safe-corona p{
     font-size: 17px;
@@ -197,7 +200,7 @@
     text-align: center;
     background-color: #000007;
     height: 180px;
-    margin-top: 67px;
+    margin-top: 160px;
 }
 .mission-2022{
     font-size: 10px;
