--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@
 .goal{
     display: flex;
     font-family: 'Poppins', sans-serif;
-    margin-left: 115px;
+    margin-left: 173px;
 }
 .mission{
     margin: 20px;
@@ -200,7 +200,7 @@
     text-align: center;
     background-color: #000007;
     height: 180px;
-    margin-top: 160px;
+    margin-top: 200px;
 }
 .mission-2022{
     font-size: 10px;
@@ -208,5 +208,5 @@
     color: white;
 }
 body{
-    margin: 0;
+    margin: 0px ;
 }
